--- a/index.html
+++ b/index.html
@@ -9,7 +9,36 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   </head>
   <body>
-    
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			  <a class="navbar-brand" href="#">MyApp</a>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+
+			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+				  <li class="nav-item active">
+					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="#">Features</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="#">Download the app</a>
+				  </li>
+				</ul>
+				<form class="form-inline my-2 my-lg-0">
+					<label for="inputEmail6">Email</label>
+					<input class="form-control mx-sm-3" type="email" placeholder="Enter your email" id="inputEmail6" aria-label="Email">
+					<label for="inputPassword6">Password</label>
+					<input type="password" id="inputPassword6" class="form-control mx-sm-3" aria-describedby="passwordHelpInline" placeholder="Password">
+					<small id="passwordHelpInline" class="text-muted">
+					 
+					</small>
+					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log In</button>
+				</form>
+			  </div>
+		</nav>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
