1) Card Decker added, 2) Information included

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 		.appSummary{
 			text-align: center;
 		}
+		.margin{
+			margin-bottom: 46.78px;
+		}
 	</style>
+	<title>Shazam For Food</title>
   </head>
   <body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -76,6 +80,32 @@
 			<div class="appSummary">
 				<h1>This is why it's awesome!</h1>
 				<p class="lead">Features</p>
+			</div>
+			<div class="card-deck">
+			  <div class="card">
+				<img class="card-img-top margin" src="images/blt.png" alt="BLT Sandwich">
+				<div class="card-body">
+				  <h4 class="card-title">BLT</h4>
+				  <p class="card-text">A BLT is a type of bacon sandwich. The standard BLT is made up of four ingredients: bacon, lettuce, tomato, and bread.</p>
+				  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+				</div>
+			  </div>
+			  <div class="card">
+				<img class="card-img-top" src="images/EC.jpg" alt="Egg & Cheese">
+				<div class="card-body">
+				  <h4 class="card-title">Egg & Cheese</h4>
+				  <p class="card-text">Eegg and cheese sandwich is a breakfast sandwich popular in the United States. The sandwich is typically made with eggs (typically fried or scrambled), cheese and bread, which may be buttered and toasted.</p>
+				  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+				</div>
+			  </div>
+			  <div class="card">
+				<img class="card-img-top margin" src="images/tc.jpg" alt="Turkey and Cheese Sandwich">
+				<div class="card-body">
+				  <h4 class="card-title">Turkey and Cheese</h4>
+				  <p class="card-text">Oven Roasted Turkey and Cheese Sandwich is a delicious and easy recipe made with wholesome, all-natural ingredients.</p>
+				  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+				</div>
+			  </div>
 			</div>
 		</div>
     <!-- Optional JavaScript -->
