Turkey and Cheese image can be seen

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				</div>
 			  </div>
 			  <div class="card">
-				<img class="card-img-top margin" src="images/tc.jpg" alt="Turkey and Cheese Sandwich">
+				<img class="card-img-top margin" src="images/TC.jpg" alt="Turkey and Cheese Sandwich">
 				<div class="card-body">
 				  <h4 class="card-title">Turkey and Cheese</h4>
 				  <p class="card-text">Oven Roasted Turkey and Cheese Sandwich is a delicious and easy recipe made with wholesome, all-natural ingredients.</p>
