--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
 		.margin{
 			margin-bottom: 46.78px;
 		}
+		.appDownload{
+			text-align: center;
+			
+			background-image: url(images/download.jpg);
+		}
+		#footer{
+			padding-top: 40px;
+			color:white;
+			padding-bottom: 80px;
+		}
 	</style>
 	<title>Shazam For Food</title>
   </head>
@@ -106,6 +116,14 @@
 				  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 				</div>
 			  </div>
+			</div>
+		</div>
+		<div class="appDownload">
+			<div id="footer">
+				<h2>Download the App</h2>
+				<p class="lead">Available on Apple App Store and Google Play Store</p>
+				<p class="lead"><img src="images/appleStore.png"</p>
+				<img src="images/rsz_googleStore.png">
 			</div>
 		</div>
     <!-- Optional JavaScript -->
