Link added to nav bars

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
 				  <li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="#jumbotron">Home <span class="sr-only">(current)</span></a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="#">Features</a>
+					<a class="nav-link" href="#appSummary">Features</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="#">Download the app</a>
+					<a class="nav-link" href="#appDownload">Download the app</a>
 				  </li>
 				</ul>
 				<form class="form-inline my-2 my-lg-0">
@@ -72,7 +72,7 @@
 				</form>
 			  </div>
 		</nav>
-		<div class="jumbotron">
+		<div class="jumbotron" id="jumbotron">
 		  <h1 class="display-3">Shazam for Food</h1>
 		  
 			<p class="lead">This identifies what food you're looking at and provides you recipes!</p>
@@ -87,7 +87,7 @@
 			 </p>
 		</div>
 		<div class="container">
-			<div class="appSummary">
+			<div class="appSummary" id="appSummary">
 				<h1>This is why it's awesome!</h1>
 				<p class="lead">Features</p>
 			</div>
@@ -118,7 +118,7 @@
 			  </div>
 			</div>
 		</div>
-		<div class="appDownload">
+		<div class="appDownload" id="appDownload">
 			<div id="footer">
 				<h2>Download the App</h2>
 				<p class="lead">Available on Apple App Store and Google Play Store</p>
