--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<h2>Download the App</h2>
 				<p class="lead">Available on Apple App Store and Google Play Store</p>
 				<p class="lead"><img src="images/appleStore.png"</p>
-				<img src="images/rsz_googleStore.png">
+				<img src="images/rsz_googlestore.png">
 			</div>
 		</div>
     <!-- Optional JavaScript -->
